2.79 Rigid Body Sim. Does Not Behave The Same In 2.8 #57589

Closed
opened 2018-11-02 19:18:51 +01:00 by Predrag Lazic · 7 comments

System Information
OS: Manjaro 17.1.12 Hakoila
Kernel: x86_64 Linux 4.16.18-rt12-MANJARO
DE: KDE 5.50.0 / Plasma 5.13.5
CPU: Intel Core i5-2400S @ 4x 3.3GHz [60.0°C]
GPU: AMD TURKS (DRM 2.50.0 / 4.16.18-rt12-MANJARO, LLVM 6.0.1)
RAM: 2665MiB / 3925MiB

Blender Version
Broken: fe07839d01
Worked: f4dc9f9d68

Short description of error

  1. Rigid Body Constraint Type: Point doesn't register in 2.8 (The ball on the bell doesn't move)
  2. Driver Information for object name 'Empty' doesn't update in real time (N) panel.

Exact steps for others to reproduce the error
Attached File 18_blender_2.79_2018.11.02_RigidBodyBellFlower(02).blend
Enable auto-run python scripts checkbox in User Preferences
Play animation from beginning

**System Information** OS: Manjaro 17.1.12 Hakoila Kernel: x86_64 Linux 4.16.18-rt12-MANJARO DE: KDE 5.50.0 / Plasma 5.13.5 CPU: Intel Core i5-2400S @ 4x 3.3GHz [60.0°C] GPU: AMD TURKS (DRM 2.50.0 / 4.16.18-rt12-MANJARO, LLVM 6.0.1) RAM: 2665MiB / 3925MiB **Blender Version** Broken: fe07839d01b Worked: f4dc9f9d68b **Short description of error** 1. Rigid Body Constraint Type: Point doesn't register in 2.8 (The ball on the bell doesn't move) 2. Driver Information for object name 'Empty' doesn't update in real time (N) panel. **Exact steps for others to reproduce the error** Attached File [18_blender_2.79_2018.11.02_RigidBodyBellFlower(02).blend](https://archive.blender.org/developer/F5339667/18_blender_2.79_2018.11.02_RigidBodyBellFlower_02_.blend) Enable auto-run python scripts checkbox in User Preferences Play animation from beginning
Author

Added subscriber: @particl3s

Added subscriber: @particl3s

#60007 was marked as duplicate of this issue

#60007 was marked as duplicate of this issue
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-11-05 11:37:35 +01:00
Member

regarding 2. (driver in N Panels): you have to enable Timeline > Menu > Playback > Play Animation in: Property Editors. This was not the case in 2.79, not sure why this is needed in 2.8...
regarding 1. (RB point constraint): can confirm there is an issue [ball doesnt move]

also noticed that 2.8 detects a second dependency cycle [not sure if this is related though...]

2.8

Dependency cycle detected:
  'SCscene.RIGIDBODY_REBUILD()' depends on 'OBNurbsPath.GEOMETRY_UBEREVAL()' through 'Object Geom Eval -> Rigidbody Rebuild'
  'OBNurbsPath.GEOMETRY_UBEREVAL()' depends on 'OBNurbsPath.TRANSFORM_FINAL()' through 'Hook Modifier'
  'OBNurbsPath.TRANSFORM_FINAL()' depends on 'OBNurbsPath.TRANSFORM_OBJECT_UBEREVAL()' through 'Temp Ubereval'
  'OBNurbsPath.TRANSFORM_OBJECT_UBEREVAL()' depends on 'OBNurbsPath.RIGIDBODY_TRANSFORM_COPY()' through 'RBO Sync -> Uber (Temp)'
  'OBNurbsPath.RIGIDBODY_TRANSFORM_COPY()' depends on 'SCscene.RIGIDBODY_SIM()' through 'Rigidbody Sim Eval -> RBO Sync'
  'SCscene.RIGIDBODY_SIM()' depends on 'SCscene.RIGIDBODY_REBUILD()' through 'Rigidbody [Init -> SimStep]'
Dependency cycle detected:
  'SCscene.RIGIDBODY_SIM()' depends on 'OBIcosphere.001.TRANSFORM_PARENT()' through 'Base Ob Transform -> Rigidbody Sim Eval'
  'OBIcosphere.001.TRANSFORM_PARENT()' depends on 'OBIcosphere.001.TRANSFORM_LOCAL()' through 'ObLocal -> ObParent'
  'OBIcosphere.001.TRANSFORM_LOCAL()' depends on 'OBIcosphere.TRANSFORM_FINAL()' through 'Parent'
  'OBIcosphere.TRANSFORM_FINAL()' depends on 'OBIcosphere.TRANSFORM_OBJECT_UBEREVAL()' through 'Temp Ubereval'
  'OBIcosphere.TRANSFORM_OBJECT_UBEREVAL()' depends on 'OBIcosphere.RIGIDBODY_TRANSFORM_COPY()' through 'RBO Sync -> Uber (Temp)'
  'OBIcosphere.RIGIDBODY_TRANSFORM_COPY()' depends on 'SCscene.RIGIDBODY_SIM()' through 'Rigidbody Sim Eval -> RBO Sync'
Detected 2 dependency cycles

2.7 with new dependency graph

Dependency cycle detected:
  'SCscene.RIGIDBODY_SIM()' depends on 'OBIcosphere.001.TRANSFORM_PARENT()' through 'Base Ob Transform -> Rigidbody Sim Eval'
  'OBIcosphere.001.TRANSFORM_PARENT()' depends on 'OBIcosphere.001.TRANSFORM_LOCAL()' through '[ObLocal -> ObParent]'
  'OBIcosphere.001.TRANSFORM_LOCAL()' depends on 'OBIcosphere.TRANSFORM_FINAL()' through 'Parent'
  'OBIcosphere.TRANSFORM_FINAL()' depends on 'OBIcosphere.OBJECT_UBEREVAL()' through 'Temp Ubereval'
  'OBIcosphere.OBJECT_UBEREVAL()' depends on 'OBIcosphere.TRANSFORM_RIGIDBODY()' through 'RBO Sync -> Uber (Temp)'
  'OBIcosphere.TRANSFORM_RIGIDBODY()' depends on 'SCscene.RIGIDBODY_SIM()' through 'Rigidbody Sim Eval -> RBO Sync'

@Sergey: mind having a look?

regarding `2. (driver in N Panels)`: you have to enable `Timeline` > `Menu` > `Playback` > `Play Animation in: Property Editors`. This was not the case in 2.79, not sure why this is needed in 2.8... regarding `1. (RB point constraint)`: can confirm there is an issue [ball doesnt move] also noticed that 2.8 detects a second dependency cycle [not sure if this is related though...] 2.8 ``` Dependency cycle detected: 'SCscene.RIGIDBODY_REBUILD()' depends on 'OBNurbsPath.GEOMETRY_UBEREVAL()' through 'Object Geom Eval -> Rigidbody Rebuild' 'OBNurbsPath.GEOMETRY_UBEREVAL()' depends on 'OBNurbsPath.TRANSFORM_FINAL()' through 'Hook Modifier' 'OBNurbsPath.TRANSFORM_FINAL()' depends on 'OBNurbsPath.TRANSFORM_OBJECT_UBEREVAL()' through 'Temp Ubereval' 'OBNurbsPath.TRANSFORM_OBJECT_UBEREVAL()' depends on 'OBNurbsPath.RIGIDBODY_TRANSFORM_COPY()' through 'RBO Sync -> Uber (Temp)' 'OBNurbsPath.RIGIDBODY_TRANSFORM_COPY()' depends on 'SCscene.RIGIDBODY_SIM()' through 'Rigidbody Sim Eval -> RBO Sync' 'SCscene.RIGIDBODY_SIM()' depends on 'SCscene.RIGIDBODY_REBUILD()' through 'Rigidbody [Init -> SimStep]' Dependency cycle detected: 'SCscene.RIGIDBODY_SIM()' depends on 'OBIcosphere.001.TRANSFORM_PARENT()' through 'Base Ob Transform -> Rigidbody Sim Eval' 'OBIcosphere.001.TRANSFORM_PARENT()' depends on 'OBIcosphere.001.TRANSFORM_LOCAL()' through 'ObLocal -> ObParent' 'OBIcosphere.001.TRANSFORM_LOCAL()' depends on 'OBIcosphere.TRANSFORM_FINAL()' through 'Parent' 'OBIcosphere.TRANSFORM_FINAL()' depends on 'OBIcosphere.TRANSFORM_OBJECT_UBEREVAL()' through 'Temp Ubereval' 'OBIcosphere.TRANSFORM_OBJECT_UBEREVAL()' depends on 'OBIcosphere.RIGIDBODY_TRANSFORM_COPY()' through 'RBO Sync -> Uber (Temp)' 'OBIcosphere.RIGIDBODY_TRANSFORM_COPY()' depends on 'SCscene.RIGIDBODY_SIM()' through 'Rigidbody Sim Eval -> RBO Sync' Detected 2 dependency cycles ``` 2.7 with new dependency graph ``` Dependency cycle detected: 'SCscene.RIGIDBODY_SIM()' depends on 'OBIcosphere.001.TRANSFORM_PARENT()' through 'Base Ob Transform -> Rigidbody Sim Eval' 'OBIcosphere.001.TRANSFORM_PARENT()' depends on 'OBIcosphere.001.TRANSFORM_LOCAL()' through '[ObLocal -> ObParent]' 'OBIcosphere.001.TRANSFORM_LOCAL()' depends on 'OBIcosphere.TRANSFORM_FINAL()' through 'Parent' 'OBIcosphere.TRANSFORM_FINAL()' depends on 'OBIcosphere.OBJECT_UBEREVAL()' through 'Temp Ubereval' 'OBIcosphere.OBJECT_UBEREVAL()' depends on 'OBIcosphere.TRANSFORM_RIGIDBODY()' through 'RBO Sync -> Uber (Temp)' 'OBIcosphere.TRANSFORM_RIGIDBODY()' depends on 'SCscene.RIGIDBODY_SIM()' through 'Rigidbody Sim Eval -> RBO Sync' ``` @Sergey: mind having a look?

Added subscribers: @MaxAnn, @ZedDB

Added subscribers: @MaxAnn, @ZedDB

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed by 024f5ba2bd.

Note that meshdeform is to be re-bound due to difference in vertices order with the new subsurf modifier.

Fixed by 024f5ba2bd. Note that meshdeform is to be re-bound due to difference in vertices order with the new subsurf modifier.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57589
No description provided.